Revert "Fix white background not stretching to the bottom of the page."
This reverts commit 55f2a39c05f2c4a6d5cbcc401c6cf0ef64fed8e3.

--- a/public/stylesheets/loggedInstyle.css
+++ b/public/stylesheets/loggedInstyle.css
@@ -10,9 +10,8 @@ hr.style1 {
 .content-container {
     background-color: #FFFFFF;
     width: 80%;
+    height: 100%;
     margin: auto;
-    display: flex;
-    flex-direction: column;
 }
 
 .btn-teal {
